# SnakeGame

./: .gitignore  CMakeLists.txt  README.md
include/: Game.h  Game.hpp  Game_state.h  Game_state.hpp  State.h  State.hpp  main.h  main.hpp
src/: CMakeLists.txt  Game.cpp  Game_state.cpp  State.cpp  main.cpp
